--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,11 @@
       href="{% static 'css/index.css' %}"
       rel="stylesheet"
     />
+    <link
+      type="text/css"
+      href="{% static 'css/partials/arrow.css' %}"
+      rel="stylesheet"
+    />
 
     <link
       type="text/css"
