--- a/templates/home.html
+++ b/templates/home.html
@@ -28,20 +28,20 @@
     <section id="work" class="section">
       <div class="section__container">
         <div class="work__categories">
-        <button class="category__btn">
-          <div class="category__btn-text" data-filter="new">최신 <span class="category__count">4</span></div>
+        <button class="category__btn selected" data-filter="new">
+          <div class="category__btn-text  " >최신 <span class="category__count">4</span></div>
           </button
         >
-        <button class="category__btn ">
-          <div class="category__btn-text" data-filter="man">남성성 <span class="category__count">4</span></div>
+        <button class="category__btn"  data-filter="man">
+          <div class="category__btn-text">남성성 <span class="category__count">4</span></div>
           </button
         >
-        <button class="category__btn ">
-          <div class="category__btn-text" data-filter="wom">여성성 <span class="category__count">4</span></div>
+        <button class="category__btn" data-filter="wom">
+          <div class="category__btn-text" >여성성 <span class="category__count">4</span></div>
           </button
         >
-        <button class="category__btn ">
-          <div class="category__btn-text" data-filter="today">오늘의 그림 <span class="category__count">4</span></div>
+        <button class="category__btn"  data-filter="today">
+          <div class="category__btn-text">오늘의 그림 <span class="category__count">4</span></div>
           </button
         >
        
@@ -49,7 +49,7 @@
       <div class="work__projects">
 
         {% for abc in sweet %}
-          <a href="" class="project" target="blank" data-type="front-end">
+          <a href="" class="project" target="blank" data-type="new">
           <img
             src= '{{abc.get_photo_url}}'
         
