--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -6,8 +6,12 @@
   </div>
   <div class="navbar__menu">
     <ul class="navbar__menu">
-      <li class="navbar__menu__item">About</li>
-      <li class="navbar__menu__item">Pics</li>
+      <li class="navbar__menu__item">
+        <a href="{% url 'core:pic_list' %}">About</a>
+      </li>
+      <li class="navbar__menu__item">
+        <a href="{% url 'core:pic_list' %}">Pics</a>
+      </li>
     </ul>
   </div>
   <button class="navbar__toggle-btn">
