--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,11 @@
       href="{% static 'css/partials/contact.css' %}"
       rel="stylesheet"
     />
+    <link
+      type="text/css"
+      href="{% static 'css/pic-list/pic-list.css' %}"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    {% include 'partials/navbar.html' %} {% block content %} {% endblock %}
-  </body>
+  <div id="hllo">{% include 'partials/navbar.html' %}</div>
 </html>
