--- a/static/css/partials/navbar.css
+++ b/static/css/partials/navbar.css
@@ -1,12 +1,30 @@
 /* Navbar */
 #navbar {
   display: flex;
+
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  background-color: var(--color-pink);
+  transition: all var(--animation-duration) ease-in-out;
+  z-index: 2;
+}
+
+#home #navbar {
+  background-color: transparent;
+  box-shadow: none;
+  position: fixed;
+}
+
+#navbar__list {
+  display: flex;
   position: fixed;
   width: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  background-color: transparent;
+
   transition: all var(--animation-duration) ease-in-out;
   z-index: 2;
 }
