--- a/templates/partials/pic_list.html
+++ b/templates/partials/pic_list.html
@@ -10,85 +10,72 @@
   <body>
     {% block content %}
 
-    <!-- Navbar -->
+    <div class="pic-list">
+ 
+        <div class="pic-filter">
+          <button class="pic-filter__button selected" data-filter="new">
+            <div class="pic-filter__btn-text">#최신</div>
+          </button>
+          <button class="pic-filter__button" data-filter="man">
+            <div class="pic-filter__btn-text">#남성성</div>
+          </button>
+          <button class="pic-filter__button" data-filter="wom">
+            <div class="pic-filter__btn-text">#여성성</div>
+          </button>
+          <button class="pic-filter__button" data-filter="today">
+            <div class="pic-filter__btn-text">#열등감</div>
+          </button>
+          <button class="pic-filter__button" data-filter="today">
+            <div class="pic-filter__btn-text">#우월감</div>
+          </button>
+          <button class="pic-filter__button" data-filter="today">
+            <div class="pic-filter__btn-text">#수치</div>
+          </button>
+          <button class="pic-filter__button" data-filter="today">
+            <div class="pic-filter__btn-text">#혜라엄마</div>
+          </button>
+          <div>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </div>
 
-    
-
-   
-    <!-- Work -->
-    <section id="work" class="section">
-      <div class="section__container">
-        <div class="work__categories">
-        <button class="category__btn selected" data-filter="new">
-          <div class="category__btn-text  " >최신 <span class="category__count">4</span></div>
-          </button
-        >
-        <button class="category__btn"  data-filter="man">
-          <div class="category__btn-text">남성성 <span class="category__count">4</span></div>
-          </button
-        >
-        <button class="category__btn" data-filter="wom">
-          <div class="category__btn-text" >여성성 <span class="category__count">4</span></div>
-          </button
-        >
-        <button class="category__btn"  data-filter="today">
-          <div class="category__btn-text">오늘의 그림 <span class="category__count">4</span></div>
-          </button
-        >
        
+           
+      
+        </div>
       </div>
-      <div class="work__projects">
 
-        {% for abc in sweet %}
-          <a href="" class="project" target="blank" data-type="new">
-          <img
-            src= '{{abc.get_photo_url}}'
-        
-            class="project__img"
-          />
+      <div class="pic-list__list">
+        {% for abcd in abc %}
+        <a href="" class="project" target="blank" data-type="new">
+          <img src="{{abcd.get_photo_url}}" class="project__img" />
           <div class="project__description">
-            <h3>{{abc.제목}}</h3>
-            <span>{{abc.desc}}</span>
+            <h3>{{abcd.제목}}</h3>
+            <span>{{abcd.desc}}</span>
           </div>
         </a>
         {% endfor %}
-
-       
       </div>
+    </div>
+
+    <!-- {% for abcd in abc %}
+    <a href="" class="project" target="blank" data-type="new">
+      <img src="{{abcd.get_photo_url}}" class="project__img" />
+      <div class="project__description">
+        <h3>{{abcd.제목}}</h3>
+        <span>{{abcd.desc}}</span>
       </div>
-    </section>
+    </a>
+    {% endfor %} -->
 
-    <!-- Contact -->
-
-    <section id="contact" class="section">
- 
-        <h1 class="contact__title">Let's talk</h1>
-        <h2 class="contact__email">donghe1472@gmail.com</h2>
-        <div class="contact__links">
-          <a href="https://github.com/dream-ellie" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="#" target="_blank">
-            <i class="fa fa-linkedin-square"></i>
-          </a>
-        </div>
-        <p class="contact__rights">2023 prodouct</p>
-      </div>
-    </section>
-
-
-     <!-- arrow button -->
+    <!-- arrow button -->
     <button class="arrow-button">
-        <i class=" fas fa-arrow-up "></i>
+      <i class="fas fa-arrow-up"></i>
     </button>
 
+    <script type="text/javascript" src="{% static 'js/arrow.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/filter.js' %}"></script>
 
-     <script type="text/javascript" src="{% static 'js/nav.js' %}"></script>
-     <script type="text/javascript" src="{% static 'js/arrow.js' %}"></script>
-     <script type="text/javascript" src="{% static 'js/filter.js' %}"></script>
-    
     {% endblock content %}
-
-    
   </body>
 </html>
