--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,6 @@
     />
   </head>
   <body>
-    {% include 'partials/navbar.html' %} {% block content %} {% endblock %}
+    {% block content %} {% endblock %}
   </body>
 </html>
