--- a/templates/home.html
+++ b/templates/home.html
@@ -17,10 +17,10 @@
     <!-- Section -->
     <section id="home">
       <div class="home__container">
-        <img class="home__avatar" src="imgs/projects/game.png" alt="" />
+        <img class="home__avatar" src="imgs/projects/home_img.jpeg" alt="" />
 
         <h2 class="home__description">영체갤러리</h2>
-        <button class="home__contact">Contact me</button>
+        <button class="home__contact">영체마을 홈페이지</button>
       </div>
     </section>
 
@@ -29,24 +29,16 @@
       <div class="section__container">
         <div class="work__categories">
           <button class="category__btn selected" data-filter="new">
-            <div class="category__btn-text">
-              최신 <span class="category__count">4</span>
-            </div>
+            최신 <span class="category__count">4</span>
           </button>
           <button class="category__btn" data-filter="man">
-            <div class="category__btn-text">
-              남성성 <span class="category__count">4</span>
-            </div>
+            남성성 <span class="category__count">4</span>
           </button>
           <button class="category__btn" data-filter="wom">
-            <div class="category__btn-text">
-              여성성 <span class="category__count">4</span>
-            </div>
+            여성성 <span class="category__count">4</span>
           </button>
           <button class="category__btn" data-filter="today">
-            <div class="category__btn-text">
-              오늘의 그림 <span class="category__count">4</span>
-            </div>
+            오늘의 그림 <span class="category__count">4</span>
           </button>
         </div>
         <div class="work__projects">
@@ -66,7 +58,6 @@
     <!-- Contact -->
 
     <section id="contact" class="section">
-      <h1 class="contact__title">Let's talk</h1>
       <h2 class="contact__email">donghe1472@gmail.com</h2>
       <div class="contact__links">
         <a href="https://github.com/dream-ellie" target="_blank">
