--- a/static/css/partials/navbar.css
+++ b/static/css/partials/navbar.css
@@ -34,6 +34,11 @@
   padding: 8px;
 }
 
+#home__all #navbar.navbar--dark {
+  background-color: var(--color-pink);
+  padding: 8px;
+}
+
 .navbar__logo {
   font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
