--- a/templates/partials/search.html
+++ b/templates/partials/search.html
@@ -9,103 +9,47 @@
   </head>
   <body class="body">
     {% include 'partials/navbar.html' %}
-    <div class="body">
- 
+
+    <div class="pic-list">
       
         <div class="pic-filter">
-        
-          <div class="pic-filter__slide showing">
           <button class="pic-filter__button selected" data-filter="new">
             <div class="pic-filter__btn-text">#최신</div>
           </button>
           <button class="pic-filter__button" data-filter="man">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#남성성</div>
           </button>
           <button class="pic-filter__button" data-filter="wom">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#여성성</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#열등감</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#우월감</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱ</div>
+            <div class="pic-filter__btn-text">#수치</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#혜라엄마</div>
           </button>
 
-          <div class="pic-filter__chevron">
-            <i class="fas fa-chevron-right"></i>
-          </div>
-          </div>
-
-          <div class="pic-filter__slide">
-           <button class="pic-filter__button selected" data-filter="new">
-            <div class="pic-filter__btn-text">#최신</div>
-          </button>
-          <button class="pic-filter__button" data-filter="man">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="wom">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱㄱ</div>
-          </button>
           <div>
             <i class="fas fa-chevron-right"></i>
-         
-      </div>
-         </div>
-
-           <!-- <button class="pic-filter__filterbtn">       <i class="fas fa-bars"></i>필터</button> -->
-   
-
-         
-        </div>
-
-          
-
-
-        </div>
-
-        <div class="modal hidden">
-          <div class="modal__overlay"></div>
-          <div class="modal__content">
-            <h1>관념별</h1>
-             <div>
-            <h3>Amenities</h3>
-          
-            <ul>
-                {% for abc in sweet %}
-                    <li>
-                        <label for="a_{{abc.pk}}">{{abc.name}}</label>
-                        <input id="a_{{abc.pk}}" name="amenities" type="checkbox" value={{abc.pk}} />
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-        
-            <button>ddd</button>
           </div>
         </div>
+
         
-    
+       
+        </div>
+
+      
+        
+      </div>
 
       <div class="pic-list__list">
-        {% for abcd in abc.object_list %}
+        {% for abcd in products %}
         <a href="" class="project" target="blank" data-type="new">
           <img src="{{abcd.get_photo_url}}" class="project__img" />
           <div class="project__description">
@@ -145,7 +89,7 @@
             <!-- 글 작성 버튼은 관리자만 보이도록 해주세요 -->
         </form>
 
-
+    </div>
 
     <section id="contact" class="section">
       
@@ -165,17 +109,11 @@
      <button class="arrow-button">
       <i class="fas fa-arrow-up"></i>
     </button>
-
-
-
     <script type="text/javascript" src="{% static 'js/arrow-sec.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/arrow.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/filter.js' %}"></script>
-     <script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/pic-filter.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/modal.js' %}"></script>
-   
 
-   
+    
   </body>
 </html>
