--- a/static/css/pic-list/pic-list.css
+++ b/static/css/pic-list/pic-list.css
@@ -40,7 +40,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  margin: 30px;
+  margin: 50px;
 }
 
 .pic-filter__button {
@@ -102,6 +102,8 @@
   border-radius: 15px;
   font-size: var(--font-regular);
   font-weight: 700;
+  position: absolute;
+  left: 80%;
 }
 
 .pic-filter__filterbtn.selected,
@@ -125,6 +127,7 @@
   align-items: center;
 
   z-index: 100;
+  overflow: auto;
 }
 
 .hidden {
@@ -136,7 +139,6 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  overflow-y: scroll;
 }
 
 .modal__content {
@@ -146,7 +148,21 @@
 }
 
 .pic-filter__slide {
-  display: flex;
+  display: none;
   position: absolute;
   align-items: center;
+}
+
+.pic-filter__chevron {
+  z-index: 99999;
+  position: absolute;
+  left: 80%;
+}
+
+.pic-filter__slide.showing {
+  display: flex;
+}
+
+.modal__list {
+  display: flex;
 }
