--- a/templates/partials/pic_list.html
+++ b/templates/partials/pic_list.html
@@ -19,10 +19,10 @@
             <div class="pic-filter__btn-text">#최신</div>
           </button>
           <button class="pic-filter__button" data-filter="man">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#야</div>
           </button>
           <button class="pic-filter__button" data-filter="wom">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#야임마</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
             <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
@@ -37,43 +37,41 @@
             <div class="pic-filter__btn-text">#ㄱㄱㄱㄱ</div>
           </button>
 
-          <div class="pic-filter__chevron">
-            <i class="fas fa-chevron-right"></i>
-          </div>
+         
           </div>
 
           <div class="pic-filter__slide">
            <button class="pic-filter__button selected" data-filter="new">
-            <div class="pic-filter__btn-text">#최신</div>
+            <div class="pic-filter__btn-text">#ㄴㄴ</div>
           </button>
           <button class="pic-filter__button" data-filter="man">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#ㄴㄴㄴ</div>
           </button>
           <button class="pic-filter__button" data-filter="wom">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#ㄴㄴㄴ</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#ㄴㄴㄴ</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#ㄴㄴㄴ</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱ</div>
+            <div class="pic-filter__btn-text">#ㄴㄴ</div>
           </button>
           <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱㄱ</div>
+            <div class="pic-filter__btn-text">#ㄴㄴㄴ</div>
           </button>
-          <div>
-            <i class="fas fa-chevron-right"></i>
-         
-      </div>
+          
          </div>
 
-           <!-- <button class="pic-filter__filterbtn">       <i class="fas fa-bars"></i>필터</button> -->
+          <div class="pic-filter__chevron">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+
+           <button class="pic-filter__filterbtn">       <i class="fas fa-bars">필터</i></button>
    
 
-         
         </div>
 
           
@@ -84,21 +82,61 @@
         <div class="modal hidden">
           <div class="modal__overlay"></div>
           <div class="modal__content">
-            <h1>관념별</h1>
-             <div>
-            <h3>Amenities</h3>
-          
-            <ul>
-                {% for abc in sweet %}
+            <h1>형태</h1>
+             <div class="modal__filter">
+            <ul class="modal__list">
+                {% for pot in abcd %}
                     <li>
-                        <label for="a_{{abc.pk}}">{{abc.name}}</label>
+                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
                         <input id="a_{{abc.pk}}" name="amenities" type="checkbox" value={{abc.pk}} />
                     </li>
                 {% endfor %}
             </ul>
         </div>
+
+        <h1>관념별</h1>
+             <div class="modal__filter">
+            <ul class="modal__list">
+                {% for pot in mind %}
+                    <li>
+                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
+                        <input id="a_{{abc.pk}}" name="amenities" type="checkbox" value={{abc.pk}} />
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+
+         <h1>색깔</h1>
+             <div class="modal__filter">
+            <ul class="modal__list">
+                {% for pot in color %}
+                    <li>
+                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
+                        <input id="a_{{abc.pk}}" name="amenities" type="checkbox" value={{abc.pk}} />
+                    </li>
+                {% endfor %}
+            </ul>
+
+            
+        </div>
+
+         <h1>기타</h1>
+             <div class="modal__filter">
+            <ul class="modal__list">
+                {% for pot in other %}
+                    <li>
+                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
+                        <input id="a_{{abc.pk}}" name="amenities" type="checkbox" value={{abc.pk}} />
+                    </li>
+                {% endfor %}
+            </ul>
+
+            
+        </div>
+
+
         
-            <button>ddd</button>
+            <button>조회</button>
           </div>
         </div>
         
@@ -169,9 +207,9 @@
 
 
     <script type="text/javascript" src="{% static 'js/arrow-sec.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/arrow.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/filter.js' %}"></script>
-     <script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
+   
+   
+    <script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/pic-filter.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/modal.js' %}"></script>
    
