--- a/templates/partials/search.html
+++ b/templates/partials/search.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="pic-list__list">
-        {% for abcd in products %}
+        {% for abcd in abc %}
         <a href="" class="project" target="blank" data-type="new">
           <img src="{{abcd.get_photo_url}}" class="project__img" />
           <div class="project__description">
