--- a/static/css/pic-list/pic-list.css
+++ b/static/css/pic-list/pic-list.css
@@ -120,7 +120,7 @@
   top: 25%;
   left: 25%;
   width: 50%;
-  height: 50%;
+  height: 70%;
   position: fixed;
   display: flex;
   justify-content: center;
@@ -128,6 +128,8 @@
 
   z-index: 100;
   overflow: auto;
+  border: 1px solid var(--color-dark-white);
+  background-color: var(--color-white);
 }
 
 .hidden {
@@ -135,7 +137,6 @@
 }
 
 .modal__overlay {
-  background-color: var(--color-white);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -145,6 +146,9 @@
   position: fixed;
   top: 0px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 160% 20px 0 20px;
 }
 
 .pic-filter__slide {
@@ -165,4 +169,21 @@
 
 .modal__list {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.modal__list li {
+  margin: 30px;
+  align-items: center;
+  display: flex;
+}
+
+.modal__list li input {
+  width: 30px;
+  height: 30px;
+}
+
+.modal-button {
+  display: flex;
+  justify-content: space-between;
 }
