[Feat] 필터 고치는중

--- a/templates/partials/pic_list.html
+++ b/templates/partials/pic_list.html
@@ -5,13 +5,97 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/53f56d64cb.js" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Document</title>
   </head>
-  <body class="body">
+
+    <div class="modal hidden">
+          <button id="close-btn"><ion-icon class="icon" size="large" name="close-outline"></ion-icon></button>
+          <form method="GET" action="{% url 'core:search' %}">
+            
+          <div class="modal__content">
+                <h1>형태</h1>
+             <div class="modal__filter">
+            
+            <ul class="modal__list">
+                {% for pot in shape %}
+                    <li>
+                       <input id="a_{{pot.pk}}" name="shape" type="checkbox" value={{pot.pk}} {% if pot.pk|slugify in shapes_s %}
+                            checked
+                        {% endif %} />
+                        <label for="a_{{pot.pk}}">{{pot.name}}</label>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+
+        <h1>관념별</h1>
+             <div class="modal__filter">
+            <ul class="modal__list">
+                {% for pot in mind %}
+                    <li>
+                        <input id="a_{{pot.pk}}" name="mind" type="checkbox" value={{pot.pk}} {% if pot.pk|slugify in mind_s %}
+                            checked
+                        {% endif %} 
+                        
+                         />
+                        <label for="a_{{pot.pk}}">{{pot.name}}</label>
+                      
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+
+         <h1>색깔</h1>
+             <div class="modal__filter">
+            <ul class="modal__list">
+                {% for pot in color %}
+                    <li>
+                              <input id="a_{{pot.pk}}" name="color" type="checkbox" value={{pot.pk}} {% if pot.pk|slugify in color_s %}
+                            checked
+                        {% endif %} />
+                        <label for="a_{{pot.pk}}">{{pot.name}}</label>
+                
+                    </li>
+                {% endfor %}
+            </ul>
+
+            
+        </div>
+
+         <h1>기타</h1>
+             <div class="modal__filter">
+            <ul class="modal__list">
+                {% for pot in other %}
+                    <li>
+                       <input id="a_{{pot.pk}}" name="other" type="checkbox" value={{pot.pk}} {% if pot.pk|slugify in other_s %}
+                            checked
+                        {% endif %}  />
+                        <label for="a_{{pot.pk}}">{{pot.name}}</label>
+                       
+                    </li>
+                {% endfor %}
+            </ul>
+
+            
+        </div>
+
+        <div class="modal-button">
+          <button class="modal-button__x">전체해제</button>
+          <button class="modal-button__content">조회</button>
+        </div>
+         
+          </div>
+          </form>
+        </div>
+
+  <body >
     {% include 'partials/navbar.html' %}
-    <div class="body">
+  
  
-      
+      <div class="home">
         <div class="pic-filter">
         
           <div class="pic-filter__slide showing">
@@ -75,87 +159,14 @@
         </div>
 
         
-        </div>
+   
 
-        <div class="modal hidden">
-          <form method="GET" action="{% url 'core:search' %}">
-          <div class="modal__content">
-         
-             <div class="modal__filter">
-                 <h1>형태</h1>
-            <ul class="modal__list">
-                {% for pot in abcd %}
-                    <li>
-                       <input id="a_{{abc.pk}}" name="shape" type="checkbox" value={{pot.pk}} {% if pot.pk|slugify in shapes_s %}
-                            checked
-                        {% endif %} />
-                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
-                       
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-
-        <h1>관념별</h1>
-             <div class="modal__filter">
-            <ul class="modal__list">
-                {% for pot in mind %}
-                    <li>
-                        <input id="a_{{pot.pk}}" name="amenities" type="checkbox" value={{pot.pk}}
-                         {% if pot.pk|slugify in s_amenities %}
-                                checked
-                            {% endif %}
-                         />
-                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
-                      
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-
-         <h1>색깔</h1>
-             <div class="modal__filter">
-            <ul class="modal__list">
-                {% for pot in color %}
-                    <li>
-                              <input id="a_{{abc.pk}}" name="amenities" type="checkbox" value={{abc.pk}} />
-                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
-                
-                    </li>
-                {% endfor %}
-            </ul>
-
-            
-        </div>
-
-         <h1>기타</h1>
-             <div class="modal__filter">
-            <ul class="modal__list">
-                {% for pot in other %}
-                    <li>
-                       <input id="a_{{abc.pk}}" name="amenities" type="checkbox" value={{abc.pk}} />
-                        <label for="a_{{abc.pk}}">{{pot.name}}</label>
-                       
-                    </li>
-                {% endfor %}
-            </ul>
-
-            
-        </div>
-
-        <div class="modal-button">
-          <button class="modal-button__content">전체해제</button>
-          <button class="modal-button__content">조회</button>
-        </div>
-         
-          </div>
-          </form>
-        </div>
+      
         
     
 
       <div class="pic-list__list">
-        {% for abcd in abc.object_list %}
+        {% for abcd in potato.object_list %}
         <a href="" class="project" target="blank" data-type="new">
           <img src="{{abcd.get_photo_url}}" class="project__img" />
           <div class="project__description">
@@ -170,32 +181,36 @@
 
 
       <div class="pic-list__page">
-        {% if abc.has_previous %}
-        <a class="pic-list__pageicons" href="?page={{abc.number|add:-1}}"><i class="fas fa-chevron-left  "></i></a>
+        {% if potato.has_previous %}
+        <a class="pic-list__pageicons" href="?page={{potato.number|add:-1}}"><i class="fas fa-chevron-left  "></i></a>
        {% endif %}
 
-         Page {{abc.number}} of {{abc.paginator.num_pages}}
+         Page {{potato.number}} of {{potato.paginator.num_pages}}
           
-       {% if abc.has_next  %}
+       {% if potato.has_next  %}
       
-        <a class="pic-list__pageicon" href="?page={{abc.number|add:1}}"> <i class="fas fa-chevron-right "></i></a>
+        <a class="pic-list__pageicon" href="?page={{potato.number|add:1}}"> <i class="fas fa-chevron-right "></i></a>
        {% endif %}
 
 
         </div>
 
 
-
+      <div>
           <form method="get" action="{% url 'core:search' %}" class="picture__search">
            
-            <div class="notice__search-box">
-                <input name="city" placeholder="" class="notice__search-bar" value="{{city}}">
-                <i class="fas fa-search"></i></input>
+            <div class="pic__search-box">
+                <input name="city" placeholder="" class="pic__search-bar" value="{{city}}">
+                <div class="pic__search-placeholder">
+                  <i class="fas fa-search"></i></input>
+                  <p class="sc-searchbox-placeholder-text">Search </p>
+                </div>
+                
 
             </div>
             <!-- 글 작성 버튼은 관리자만 보이도록 해주세요 -->
         </form>
-
+      </div>
 
 
     <section id="contact" class="section">
@@ -225,8 +240,8 @@
     <script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/pic-filter.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/modal.js' %}"></script>
-   
+ 
 
-   
+   </div>
   </body>
 </html>
