--- a/static/css/pic-list/pic-list.css
+++ b/static/css/pic-list/pic-list.css
@@ -35,6 +35,30 @@
   cursor: pointer;
 }
 
+.pic-filter__closebtn {
+  margin: 100px 0px 0px 0px;
+  flex: 0 0 auto;
+  padding: 0 1rem;
+  height: 15px;
+  width: 15px;
+  text-align: center;
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: #495057;
+  border-radius: 20px;
+  box-shadow: inset 0 0 0 1px #ced4da;
+  background-color: #fff;
+  cursor: pointer;
+  border: 1px solid var(--color-dark-white);
+
+  display: flex;
+}
+
+.pic-filter__closebtn:hover {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+
 .pic-filter {
   display: flex;
   justify-content: center;
@@ -120,10 +144,10 @@
   top: 25%;
   left: 25%;
   width: 50%;
-  height: 70%;
+  height: 50%;
   position: fixed;
   display: flex;
-  justify-content: center;
+
   align-items: center;
 
   z-index: 100;
@@ -131,6 +155,8 @@
   border: 1px solid var(--color-dark-white);
   background-color: var(--color-white);
 }
+
+/* modal 이 떴을때 전ㄴ체 화면 style opacity 어둡게 */
 
 .hidden {
   display: none;
@@ -143,12 +169,13 @@
 }
 
 .modal__content {
-  position: fixed;
   top: 0px;
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
-  margin: 160% 20px 0 20px;
+  margin-top: 60px;
+  left: 5%;
+  right: 5%;
 }
 
 .pic-filter__slide {
@@ -186,4 +213,121 @@
 .modal-button {
   display: flex;
   justify-content: space-between;
+}
+
+#close-btn {
+  position: absolute;
+  top: 6%;
+  right: 5%;
+}
+
+#close-btn icon {
+}
+
+.modal-button__content {
+  border: 1px solid var(--color-dark-white);
+  background-color: transparent;
+  cursor: pointer;
+
+  margin: 0;
+  padding: 20px;
+
+  border-radius: 15px;
+  font-size: var(--font-regular);
+  font-weight: 700;
+}
+
+.modal-button__x {
+  background-color: transparent;
+  cursor: pointer;
+
+  margin: 0;
+  padding: 20px;
+
+  border-radius: 15px;
+  font-size: var(--font-regular);
+  font-weight: 700;
+  text-decoration-line: underline;
+}
+
+.modal-button {
+  margin-bottom: 20px;
+}
+
+.modal-button__content:hover {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+
+.pic__search-box {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  width: 90%;
+  margin-bottom: 30px;
+}
+
+.pic__search-box input {
+  height: 42px;
+  width: 40%;
+  padding: 16px 16px 16px 48px;
+  background-color: var(--color-white);
+  border-radius: 40px;
+  border: 0;
+
+  border: 1px solid var(--color-dark-white);
+}
+
+.pic__search-placeholder {
+  position: absolute;
+  display: flex;
+
+  height: 100%;
+  width: 83%;
+  align-items: center;
+  justify-content: flex-end;
+  top: 0;
+  left: 0;
+
+  color: rgba(0, 0, 0, 0.6);
+
+  pointer-events: none;
+  transition: ease-in-out 0.2s;
+}
+
+.pic__search-placeholder p {
+  margin: 0;
+  transition: ease-in-out 0.2s;
+}
+.pic__search-placeholder i {
+  margin-right: 12px;
+}
+
+.pic__search-bar:focus ~ .pic__search-placeholder,
+.pic__search-bar:focus ~ .pic__search-placeholder {
+  transform: translate3d(-15%, 0px, 0px);
+}
+
+.pic__search-bar:focus
+  ~ .sc-searchbox-placeholder-text
+  .pic__search-bar:focus
+  ~ .pic__search-placeholder {
+  opacity: 0;
+}
+
+.sc-searchbox-field:focus
+  ~ .sc-searchbox-placeholder
+  .sc-searchbox-placeholder-text,
+.sc-searchbox-field:valid
+  ~ .sc-searchbox-placeholder
+  .sc-searchbox-placeholder-text {
+  opacity: 0;
+}
+
+.pic__search-bar:focus ~ .pic__search-placeholder {
+  transform: translate3d(-20%, 0px, 0px);
+}
+
+.pic__search-bar:focus ~ .pic__search-placeholder p {
+  opacity: 0;
 }
