--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <script
+      src="https://kit.fontawesome.com/53f56d64cb.js"
+      crossorigin="anonymous"
+    ></script>
 
     <link
       type="text/css"
