--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -11,6 +11,15 @@
       <li class="navbar__menu__item">
         <a href="{% url 'core:pic_list' %}">Pics</a>
       </li>
+      <li class="navbar__menu__item">
+        <a href="{% url 'core:pic_list' %}">Profile</a>
+      </li>
+      <li class="navbar__menu__item">
+        <a href="{% url 'users:login' %}">Log in</a>
+      </li>
+      <li class="navbar__menu__item">
+        <a href="{% url 'core:pic_list' %}">Log out</a>
+      </li>
     </ul>
   </div>
   <button class="navbar__toggle-btn">
