--- a/templates/partials/pic_list.html
+++ b/templates/partials/pic_list.html
@@ -96,7 +96,7 @@
  
       <div class="home">
         <div class="pic-filter">
-        
+   
           <div class="pic-filter__slide showing">
           <button class="pic-filter__button selected" data-filter="new">
             <div class="pic-filter__btn-text">#최신</div>
@@ -146,6 +146,7 @@
             <div class="pic-filter__btn-text">#ㄴㄴㄴ</div>
           </button>
           
+      
          </div>
 
           <div class="pic-filter__chevron">
@@ -199,13 +200,12 @@
           <form method="get" action="{% url 'core:search' %}" class="picture__search">
            
             <div class="pic__search-box">
-                <input name="city" placeholder="" class="pic__search-bar" value="{{city}}">
+                <input name="city" placeholder="" class="pic__search-bar " value="{{city}}" onchange="onSubmit()">
                 <div class="pic__search-placeholder">
                   <i class="fas fa-search"></i></input>
                   <p class="sc-searchbox-placeholder-text">Search </p>
                 </div>
                 
-
             </div>
             <!-- 글 작성 버튼은 관리자만 보이도록 해주세요 -->
         </form>
@@ -240,7 +240,21 @@
     <script type="text/javascript" src="{% static 'js/pic-filter.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/modal.js' %}"></script>
  
+    <script>
+      const input = document.querySelector(".pic__search-bar");
+      function onSubmit() {
+        console.log(input.value);
+      if(!input.value) {
+        input.style.marginLeft = "10%";
+      }
 
+      else{
+        console.log("dlskwl");
+        input.classList.add("active");
+      }
+}
+
+    </script>
    </div>
   </body>
 </html>
