--- a/static/css/partials/work.css
+++ b/static/css/partials/work.css
@@ -106,6 +106,7 @@
   top: 0;
   left: 0;
   opacity: 0;
+
   transform: translateY(10px);
   transition: all var(--animation-duration) ease-in;
 }
@@ -180,4 +181,27 @@
 
 .testimonial__speech-bubble a {
   color: var(--color-pink);
+}
+
+.work__icon {
+  position: absolute;
+  top: 8%;
+  right: 5%;
+  z-index: 99;
+}
+
+.work__icon:hover {
+  transform: rotate(5%);
+}
+
+.work__icon i {
+  font-size: 30px;
+}
+
+.work__icon i {
+  display: none;
+}
+
+.work__icon i.active {
+  display: block;
 }
