--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -15,7 +15,7 @@
         <a href="{% url 'core:pic_list' %}">Profile</a>
       </li>
       <li class="navbar__menu__item">
-        <a href="{% url 'users:login' %}">Log in</a>
+        <a href=>Log in</a>
       </li>
       <li class="navbar__menu__item">
         <a href="{% url 'core:pic_list' %}">Log out</a>
